[package]
name = "rdb"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "rdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
clap-num = "1.0.0"
console = "0.15.0"
libc = "0.2.126"
rustyline = "9.1.2"
