[package]
name = "rdb"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "rdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
clap-num = "1.0.0"
console = "0.15.0"
gimli = { version = "0.26.1", features = ["read"] }
libc = "0.2.126"
memmap = "0.7.0"
object = "0.29.0"
rustyline = "9.1.2"
